<resources>
    <string name="app_name">WorkItApp</string>
    <string name="USER_NAME">User Name</string>
    <string name="PASSWORD">Password</string>
    <string name="USER_NAME_HINT">User Name</string>
    <string name="PASSWORD_HINT">Password</string>
    <string name="EMAIL_HINT">Email</string>
    <string name="DIVISION_HINT">Requested Division ID</string>
    <string name="SIGN_IN">Sign In</string>
    <string name="SEND_REQUEST">Request HR To Join</string>
    <string name="WELCOME">Hi there! Nice to see you again.</string>
    <string name="REMEMBER">Remember Me</string>
    <string name="SEND">Send</string>
    <string name="HAVE_ACCOUNT">Have an Account?  </string>
    <string name="HOME">Home</string>
    <string name="REQUESTS">Requests</string>
    <string name="ASSIGNMENTS">Assignments</string>
    <string name="STATISTICS">Statistics</string>
    <string name="PROFILE">Profile</string>
    <string name="LOGOUT">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="YOUR_ASSIGNMENTS">Your Assignments</string>
    <string name="ASSIGN">Assign</string>
    <string name="CHOOSE_WORKER">Choose Worker :</string>
    <string name="DUE_TO">Due to : </string>
    <string name="DIVISION">Division : </string>
    <string name="EMAIL">Email : </string>
    <string name="DATE">Date :</string>
    <string name="APPROVE">Approve</string>
    <string name="DECLINE">Decline</string>
    <string name="MY_PERFORMANCE">My Performance</string>
    <string name="CURRENT_WEEK">Current Week</string>
    <string name="CURRENT_MONTH">Current Month</string>
    <string name="ALL_TIMES">All Times</string>
    <string name="ASSIGNMENTS_LEFT">Tasks Left</string>
    <string name="ASSIGNMENTS_BY_EMP">Assignments By Employee</string>
    <string name="DONE_NOTDONE">Done/Not Done</string>
    <string name="REQUEST_WAITING">Your Request Is Still\nWaiting For HR Approval</string>
    <string name="TITLE">TITLE</string>
    <string name="DESCRIPTION">Description</string>
    <string name="DAY">Day</string>
    <string name="YEAR">Year</string>
    <string name="MONTH">Month</string>
</resources>