<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Request">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SEND_REQUEST"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/request_TIL_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:placeholderText="IsraelIsraeli@gmail.com"
            app:boxStrokeColor="@color/DARK_RED"
            android:hint="@string/EMAIL_HINT"
            app:hintTextColor="@color/DARK_RED"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/request_TIL_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:placeholderText="**********"
            app:boxStrokeColor="@color/DARK_RED"
            android:hint="@string/PASSWORD_HINT"
            app:hintTextColor="@color/DARK_RED"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/request_TIL_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:placeholderText="Israel Israeli"
            app:boxStrokeColor="@color/DARK_RED"
            android:hint="@string/USER_NAME_HINT"
            app:hintTextColor="@color/DARK_RED"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/request_TIL_division"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:placeholderText="*"
            app:boxStrokeColor="@color/DARK_RED"
            android:hint="@string/DIVISION_HINT"
            app:hintTextColor="@color/DARK_RED"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton

            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/request_BTN_send"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cornerRadius="90dp"
            android:backgroundTint="@color/DARK_RED"
            android:textColor="@color/white"
            android:text="@string/SEND"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="end"
            android:text="@string/HAVE_ACCOUNT"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:textColor="@color/LIGHT_GREY"
            />
            <TextView
                android:layout_gravity="center"
                android:id="@+id/request_LBL_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="start"
                android:text="@string/SIGN_IN"
                android:textColor="@color/DARK_RED"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>