<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/stats_LBL_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeMinTextSize="20sp"
        android:lines="1"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:text="@string/STATISTICS"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="10sp"
        android:lines="1"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/ASSIGNMENTS"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CURRENT_WEEK"
                android:lines="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="15sp"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <com.vaibhavlakhera.circularprogressview.CircularProgressView
                android:id="@+id/profile_PRB_week"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:fillColor="@color/TRANSPARENT"
                app:progressColor="@color/black"
                app:progressTextColor="@color/black"
                app:progressTextEnabled="true"
                app:progressTextSize="32sp"
                app:progressTextType="percent"
                app:progressWidth="8dp"
                app:totalWidth="8dp"
                app:progressRoundCap="true"
                app:progress="0"
                app:total="0"
                app:animateDuration="600"
                app:totalColor="@color/LIGHT_GREY"
                 />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ALL_TIMES"
                android:lines="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="15sp"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"/>


            <com.vaibhavlakhera.circularprogressview.CircularProgressView
                android:id="@+id/profile_PRB_allTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:fillColor="@color/TRANSPARENT"
                app:progressColor="@color/black"
                app:progressTextColor="@color/black"
                app:progressTextEnabled="true"
                app:progressTextSize="32sp"
                app:progressTextType="percent"
                app:progressWidth="8dp"
                app:totalWidth="8dp"
                app:progressRoundCap="true"
                app:progress="0"
                app:total="0"
                app:animateDuration="600"
                app:totalColor="@color/LIGHT_GREY"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="2dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ASSIGNMENTS_LEFT"
                android:lines="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="15sp"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <com.vaibhavlakhera.circularprogressview.CircularProgressView
                android:id="@+id/profile_PRB_left"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:fillColor="@color/TRANSPARENT"
                app:progressColor="@color/black"
                app:progressTextColor="@color/black"
                app:progressTextEnabled="true"
                app:progressTextSize="32sp"
                app:progressTextType="progress"
                app:progressWidth="8dp"
                app:totalWidth="8dp"
                app:progressRoundCap="true"
                app:progress="0"
                app:total="0"
                app:animateDuration="600"
                app:totalColor="@color/LIGHT_GREY"
                />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/DARK_GREY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="10sp"
        android:lines="1"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/DONE_NOTDONE"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/stats_BCH_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/DARK_GREY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="10sp"
        android:lines="1"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/ASSIGNMENTS_BY_EMP"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/stats_LBL_title"
        android:id="@+id/stats_LST_workers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="vertical"
        />

</LinearLayout>
